# Configonaut

./: .gitattributes  .gitignore  CHANGELOG.md  Package.swift  README.md  TODO.md  build.sh  mcp-servers-research.json  package-dmg.sh  package-zip.sh
.githooks/: pre-commit
.github/workflows/: release.yml
Configonaut-Windows/: .gitignore  Configonaut.sln  SETUP_ON_PC.md
Configonaut-Windows/Configonaut/: App.xaml  App.xaml.cs  Configonaut.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
Configonaut-Windows/Configonaut.Tests/: Configonaut.Tests.csproj  JsonHelperTests.cs  ModelTests.cs  PathResolverTests.cs
Configonaut-Windows/Configonaut/Converters/: Converters.cs
Configonaut-Windows/Configonaut/Models/: AgentEntry.cs  AppMode.cs  BackupFile.cs  HookRule.cs  ServerEntry.cs  SkillEntry.cs
Configonaut-Windows/Configonaut/Services/: ConfigManager.Load.cs  ConfigManager.Mutations.cs  JsonHelper.cs  PathResolver.cs
Configonaut-Windows/Configonaut/Theme/: NeonTheme.xaml
Configonaut-Windows/Configonaut/Views/: AgentsPage.xaml  AgentsPage.xaml.cs  BackupsPage.xaml  BackupsPage.xaml.cs  HooksPage.xaml  HooksPage.xaml.cs  MCPPage.xaml  MCPPage.xaml.cs  (+2 more)
Resources/: AppIcon.icns  DS_Store.template  catalog-baseline.json
Scripts/: make-icon.swift
Sources/: AgentsView.swift  ConfigManager.swift  ConfigonautApp.swift  ContentView.swift  MCPView.swift  MoveToApplications.swift  SkillsView.swift  SupportViews.swift  Theme.swift
Sources/Marketplace/: CatalogModels.swift  CatalogStore.swift  ConfigManager+Catalog.swift  MarketplaceView.swift  SecretValidator.swift
docs/: MARKETPLACE_FEATURE_PLAN.md  NOTARIZATION.md  RELEASE_SETUP.md  WINDOWS_SMOKE_TEST.md
docs/release-checklists/: auto-install-smoke.md
marketplace-catalog/: README.md  catalog.json
marketplace-catalog/docs/: CONTRIBUTING.md
marketplace-catalog/schemas/: catalog-v1.json
marketplace-catalog/scripts/: build_catalog.py  validate.py
scripts/: cut-release.sh
tauri-app/: README.md  index.html  package.json
tauri-app/public/: splash.html
tauri-app/scripts/: add-configfields-1.1.py  migrate-catalog-1.1.py
tauri-app/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/binaries/: VERSION.txt  download-uv.sh
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/resources/: catalog-baseline.json
tauri-app/src-tauri/src/: catalog.rs  claude_code.rs  commands.rs  config.rs  installer.rs  lib.rs  main.rs  models.rs  paths.rs  sidecar.rs
(+31 files in other folders)
